--- a/CSS/index.CSS
+++ b/CSS/index.CSS
@@ -1,3 +1,4 @@
+@desktop (min-width: 500px);
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -135,6 +136,7 @@ html {
 html,
 body {
   font-family: 'Roboto', sans-serif;
+  background-color: #000000;
 }
 h1,
 h2,
@@ -142,6 +144,7 @@ h3,
 h4,
 h5 {
   font-family: 'Press Start 2P', cursive;
+  color: #82E61E;
 }
 h1 {
   font-size: 4rem;
@@ -158,6 +161,7 @@ p {
   line-height: 1.5;
   font-size: 1.6rem;
   padding-bottom: 10px;
+  color: #82E61E;
 }
 img {
   max-width: 100%;
@@ -167,4 +171,79 @@ img {
   max-width: 800px;
   width: 100%;
   margin: 0 auto;
+}
+nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+nav .navHeader {
+  border-bottom: 1px #82E61E solid;
+  width: 100%;
+  text-align: center;
+  padding: 20px 0px;
+}
+nav a {
+  font-family: 'Press Start 2P', cursive;
+  font-size: 2rem;
+  text-decoration: none;
+  color: #82E61E;
+  border-bottom: 1px #82E61E solid;
+  width: 100%;
+  text-align: center;
+  padding: 20px 0px;
+}
+nav .buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+  padding: 20px 0px;
+}
+nav .buttons button {
+  background-color: #82E61E;
+  color: #000000;
+  width: 75%;
+  border-radius: 10px;
+  text-align: center;
+  font-family: 'Press Start 2P', cursive;
+  padding: 1rem 2rem;
+}
+.middle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.middle div {
+  text-align: center;
+}
+.middle div img {
+  width: 75%;
+  align-items: center;
+}
+.middle div .gogglesImg {
+  order: -1;
+}
+.middle div h2 {
+  text-align: center;
+}
+.appLogos {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.appLogos div {
+  width: 33%;
+  margin: 20px;
+}
+.appLogos div img {
+  width: 100%;
 }
