--- a/LESS/global.less
+++ b/LESS/global.less
@@ -8,10 +8,13 @@
   
   html, body {
     font-family: 'Roboto', sans-serif;
+    background-color: @black;
   }
   
   h1, h2, h3, h4, h5 {
     font-family: 'Press Start 2P', cursive;
+    color: @terminalGreen;
+    
   }
   
   h1 {
@@ -32,6 +35,7 @@
     line-height: 1.5;
     font-size: 1.6rem;
     padding-bottom: 10px;
+    color: @terminalGreen;
   }
   
   img {
