--- a/CSS/index.CSS
+++ b/CSS/index.CSS
@@ -1,4 +1,3 @@
-@desktop (min-width: 500px);
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -179,13 +178,49 @@ nav {
   align-items: center;
   flex-wrap: nowrap;
 }
-nav .navHeader {
+@media (min-width: 500px) {
+  nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+}
+.navHeader {
   border-bottom: 1px #82E61E solid;
   width: 100%;
   text-align: center;
   padding: 20px 0px;
 }
-nav a {
+@media (min-width: 500px) {
+  .navHeader {
+    width: 30%;
+    border-bottom: none;
+  }
+  .navHeader h1 {
+    font-size: 2rem;
+  }
+}
+.links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  width: 100%;
+}
+@media (min-width: 500px) {
+  .links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    width: 20%;
+  }
+}
+.links a {
   font-family: 'Press Start 2P', cursive;
   font-size: 2rem;
   text-decoration: none;
@@ -195,7 +230,14 @@ nav a {
   text-align: center;
   padding: 20px 0px;
 }
-nav .buttons {
+@media (min-width: 500px) {
+  .links a {
+    font-size: 1rem;
+    border-bottom: none;
+    width: 10%;
+  }
+}
+.buttons {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -204,7 +246,7 @@ nav .buttons {
   width: 100%;
   padding: 20px 0px;
 }
-nav .buttons button {
+.buttons button {
   background-color: #82E61E;
   color: #000000;
   width: 75%;
@@ -212,6 +254,16 @@ nav .buttons button {
   text-align: center;
   font-family: 'Press Start 2P', cursive;
   padding: 1rem 2rem;
+  padding: 10px 0;
+}
+@media (min-width: 500px) {
+  .buttons {
+    width: 20%;
+    border-bottom: none;
+  }
+  .buttons button {
+    margin: 0 10px;
+  }
 }
 .middle {
   display: flex;
@@ -222,6 +274,7 @@ nav .buttons button {
 }
 .middle div {
   text-align: center;
+  padding: 20px;
 }
 .middle div img {
   width: 75%;
