--- a/LESS/homeBody.less
+++ b/LESS/homeBody.less
@@ -3,6 +3,7 @@
   div{
      
     text-align: center;
+    padding: 20px;
 
     img{
         width: 75%;
@@ -16,9 +17,7 @@
         text-align: center;
     }
   }
-//   .middle:nth-child(3){
-//     order: 2;
-//   }
+
 }
 
  .appLogos{
@@ -28,6 +27,7 @@
         margin: 20px;
         img{
             width: 100%;
+           
         }
         
     }
