--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -1,12 +1,35 @@
 nav{
     .flex(column, space-between, center, nowrap);
+    @media @desktop{
+           .flex(row, space-between, center, wrap);
+         
+          }   
+    
+}
     .navHeader{
         border-bottom: 1px @terminalGreen solid;
     width: 100%;
     text-align: center;
     padding: 20px 0px;
+    @media @desktop{
+        width: 30%;
+        border-bottom: none;
+        h1{
+            font-size: 2rem;
+        }
+    }
+
 }
-    a{
+
+
+  .links{
+    .flex(column, space-between, center, nowrap);
+    width: 100%;
+    @media @desktop{
+        .flex(row, space-between, center, wrap);
+        width: 20%;
+       }
+a{
         font-family: 'Press Start 2P', cursive;
         font-size: 2rem;
         text-decoration: none;
@@ -15,13 +38,30 @@ nav{
         width: 100%;
         text-align: center;
         padding: 20px 0px;
+        @media @desktop{
+          font-size: 1rem;
+            border-bottom: none;
+            width: 10%;
+        }
     }
+    } 
     .buttons{
         .flex(row, space-around, center, nowrap);
         width: 100%;
         padding: 20px 0px;
-        button{
-            .btn(@btn-bg, @btn-font);
+            button{
+                .btn(@btn-bg, @btn-font);
+                padding: 10px 0;
+            }
+            @media @desktop{
+                width: 20%;
+                border-bottom: none;
+                button{
+                    margin: 0 10px;
+                }
+            }
         }
-           }
-}
+
+         
+
+
