--- a/LESS/nav.less
+++ b/LESS/nav.less
@@ -12,10 +12,12 @@ nav{
     text-align: center;
     padding: 20px 0px;
     @media @desktop{
-        width: 30%;
+        width: 20%;
+        
         border-bottom: none;
         h1{
             font-size: 2rem;
+            padding: 5px;
         }
     }
 
