--- a/LESS/global.less
+++ b/LESS/global.less
@@ -48,4 +48,9 @@
     width: 100%;
     margin: 0 auto;
   }
-  
+
+    .aContainer {
+    max-width: 800px;
+    width: 100%;
+    margin: 0 auto;
+  }
