finished about desktop veiw

--- a/LESS/aboutBody.less
+++ b/LESS/aboutBody.less
@@ -14,11 +14,29 @@
         margin: 20px 0px;
         img{
             width: 25%;
+            
+        }
+        h2, h3, p{
+            margin: 10px;
         }
         h3{
             font-size: 2rem;
+           
         }
+        
     }
- 
+        @media @desktop{
+            .flex(row, space-around, center, wrap);
+     
+            .techLead{
+                width: 100%;
+            }
+            .ui, .frontEnd1, .frontEnd2, .backEnd{
+                width: 40%;
+            }
+        
+        }
+    
+
 
 }
