--- a/CSS/index.CSS
+++ b/CSS/index.CSS
@@ -356,6 +356,29 @@ nav .buttons button {
 .aboutMiddle div img {
   width: 25%;
 }
+.aboutMiddle div h2,
+.aboutMiddle div h3,
+.aboutMiddle div p {
+  margin: 10px;
+}
 .aboutMiddle div h3 {
   font-size: 2rem;
+}
+@media (min-width: 501px) {
+  .aboutMiddle {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  .aboutMiddle .techLead {
+    width: 100%;
+  }
+  .aboutMiddle .ui,
+  .aboutMiddle .frontEnd1,
+  .aboutMiddle .frontEnd2,
+  .aboutMiddle .backEnd {
+    width: 40%;
+  }
 }
