--- a/LESS/homeBody.less
+++ b/LESS/homeBody.less
@@ -1,7 +1,10 @@
 .middle{
     .flex(column, center, center, nowrap);
+
     @media @desktop{
-        .flex(row, center, center, wrap);
+        .flex(row, center, center, wrap);  
+          width: 60%;
+    margin: auto;
     }
   div{
      @media @desktop{
@@ -10,7 +13,7 @@
      }
         p{
              @media @desktop{
-                 font-size: 5rem;
+                 font-size: 3rem;
              }
          }
     
@@ -28,7 +31,7 @@
     h2{
         text-align: center;
         @media @desktop{
-            font-size: 7rem;
+            font-size: 3rem;
         }
 
     }
